hphp/hack/test/typecheck/as_expression/vec3.php.exp
File "vec3.php", line 5, characters 15-16:
Invalid argument (Typing[4110])
File "vec3.php", line 11, characters 22-32:
Expected ?vec<mixed>
File "vec3.php", line 3, characters 12-28:
But got <expr#1>
File "vec3.php", line 5, characters 15-16:
  where '<expr#1>' is a reference to this expression
File "vec3.php", line 6, characters 15-16:
Invalid argument (Typing[4110])
File "vec3.php", line 12, characters 22-33:
Expected ?vec<string>
File "vec3.php", line 3, characters 12-28:
But got <expr#1>
File "vec3.php", line 6, characters 15-16:
  where '<expr#1>' is a reference to this expression
